--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     <h2>Forms</h2>
+    <div>
+        <form action="/next.html">
+            
+            <input type="text" placeholder="Enter first name"/><br>
+            <input type="text" placeholder="Enter last name"/><br>
+            <input type="email" placeholder="Enter email id"/><br>
+            <input type="date" placeholder="Date of birth"><br>
+            <input type="password" placeholder="Enter new password"><br>
+            <input type="password" placeholder="confirm password"><br>
+            <button>Submit</button>
+        
+        </form>
+    </div>
 </body>
 </html>
